--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview", 
+    "preview": "vite preview",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
@@ -14,6 +14,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.1",
     "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
